# LovelyERes

./: .gitignore  AGENTS.md  README.md  container-terminal.html  create_icns.sh  generate_icons.py  index.html  package-lock.json  package.json  ssh-terminal.html  vite.config.ts
.github/workflows/: release.yml
docs/: TAURI_VUE_DEVELOPMENT_SPEC.md
server/: .env.example  .env.production  .gitignore  DEPLOYMENT.md  README.md  ecosystem.config.js  nginx.conf  package.json  tsconfig.json
server/scripts/: build-and-deploy.ps1  build-and-deploy.sh  deploy.sh  init-database.ts  init-db-simple.ts  obfuscate-key.py  update-database.ts  update-max-devices.ts
server/src/: app.ts
server/src/config/: database.ts  index.ts
server/src/controllers/: authController.ts
server/src/middlewares/: auth.ts  encryption.ts  errorHandler.ts  (+2 more)
src/: container-terminal.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  ssh-terminal.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto_keys.rs  detection_manager.rs  device_info.rs  docker_manager.rs  file_analysis.rs  lib.rs  log_analysis.rs  main.rs  settings.rs  ssh_channel_manager.rs  ssh_client.rs  ssh_connection_manager.rs  ssh_debug.rs  ssh_flow_control.rs  ssh_manager.rs  ssh_manager_russh.rs  ssh_thread_manager.rs  theme_manager.rs  types.rs  window_manager.rs
src/components/: IconParkIcon.vue  SSHTerminal.vue
src/config/: api.config.ts
src/css/: base.css
src/styles/: docker.css  session-tabs.css  sftp.css  system-info.css
src/types/: global.d.ts
(+75 files in other folders)
